--- a/html/views/equipmentManagement.html
+++ b/html/views/equipmentManagement.html
@@ -206,8 +206,10 @@
         type:"post",
         async: true,
         data: {
-          equipmentId: '',
-          status: '1'
+            "equipment": JSON.stringify([{
+                equipmentId: '',
+                status: '1'
+            }])
         },
         success:function (response) {
 
@@ -238,7 +240,9 @@
           dataType: "json",
           type:"post",
           async: true,
-          data: data,
+          data: {
+              "equipment": JSON.stringify([data])
+          },
           success:function (response) {
 
           },
@@ -262,7 +266,9 @@
           dataType: "json",
           type:"post",
           async: true,
-          data: data,
+          data: {
+              "equipment": JSON.stringify([data])
+          },
           success:function (response) {
 
           },
